Add CRUD for cocktails and ingredients
